--- a/5강/02 스크립트.md
+++ b/5강/02 스크립트.md
@@ -1,4 +1,4 @@
-### 딥러닝 왜케 다들 어렵게 가르침 (딥러닝 강의 0강)
+### 딥러닝 개요
 
 안녕하세요, 오늘은 머신러닝에 대해 알아보는 시간을 가져보겠습니다. 2016년에 구글 딥마인드가 이세돌과의 바둑 대결에서 승리한 이후로, 딥러닝과 인공지능의 발전은 더욱 가속화되었습니다. 이제는 일상에서 딥러닝 기술을 쉽게 접할 수 있는 시대가 되었습니다. 예를 들어, 구글 번역은 딥러닝을 사용하여 언어를 번역하고, TTS(Text-to-Speech) 엔진은 텍스트를 입력하면 컴퓨터가 사람처럼 소리로 변환해주는 기술입니다. 실제로, 딥러닝을 적용한 TTS는 사람처럼 자연스러운 발음을 구현하고 있습니다.
 
@@ -10,9 +10,9 @@
 
 딥러닝의 기본 개념은 신경망(Neural Network)을 기반으로 합니다. 신경망은 인간의 뇌와 유사한 구조로, 뉴런과 시냅스를 모방하여 설계되었습니다. 이를 통해 컴퓨터가 데이터를 학습하고, 새로운 문제를 해결할 수 있습니다. 딥러닝을 통해 이미지 인식, 음성 인식, 번역 등 다양한 문제를 해결할 수 있으며, 이는 자율주행, 번역 등 실생활에서 유용하게 사용되고 있습니다.
 
-앞으로의 강의에서는 딥러닝의 기초 이론과 실제 예제들을 다룰 예정입니다. 강의는 중학교 수준의 어휘로 진행되며, 기본적인 수학 개념을 다룰 것입니다. 파이썬을 사용한 코드 예제도 함께 제공할 예정이니, 파이썬을 미리 공부해 오시면 좋겠습니다. 이번 강의는 딥러닝의 기초 이론에 대한 이해를 돕기 위한 것으로, 코딩 실습은 포함되지 않으니 가볍게 들어주시면 됩니다. 다음 강의에서 뵙겠습니다.
+앞으로의 강의에서는 딥러닝의 기초 이론과 실제 예제들을 다룰 예정입니다. 강의는 기본적인 수학 개념을 다룰 것입니다. 파이썬을 사용한 코드 예제도 함께 제공할 예정이니, 파이썬을 미리 공부해 오시면 좋겠습니다.
 
-### 머신러닝 개념부터 중학교 레벨로 설명해줌
+### 머신러닝 개념
 
 머신러닝은 기본적으로 기계가 스스로 학습하고 예측하는 기술입니다. 예를 들어, 사진을 보고 사람이 있는지 아닌지를 판단하는 문제를 생각해봅시다. 사람은 눈, 코, 입 등을 보고 사람이네 하고 판단합니다. 기계도 비슷하게 특정 알고리즘을 사용해 판단하게 됩니다. 이런 과정을 머신러닝이라고 합니다.
 
