--- a/5강/02 스크립트.md
+++ b/5강/02 스크립트.md
@@ -209,12 +209,12 @@ w
 
 먼저, 텐서라는 변수를 만들어보겠습니다. tf.constant라는 함수를 사용하여 다음과 같이 작성해보세요:
 
-python
-코드 복사
+```python
 import tensorflow as tf
 
 tensor = tf.constant([1, 2, 3])
 print(tensor)
+```
 이 코드를 저장하고 터미널에서 python tensor.py라고 입력하여 파일을 실행해보면, 텐서의 출력 결과가 나옵니다. 텐서플로우 실행 시 처음에는 경고 메시지가 나올 수 있지만, 에러만 없다면 문제 없습니다.
 
 이렇게 만든 텐서는 텐서플로우에서 가장 기본적인 자료형입니다. 파이썬의 리스트나 숫자 자료형과 유사하지만, 텐서플로우에서는 이를 텐서라고 부릅니다. 텐서를 만들 때는 숫자나 리스트를 포함하여 여러 가지 형식을 사용할 수 있습니다.
