--- a/5강/01 인공지능.md
+++ b/5강/01 인공지능.md
@@ -48,6 +48,9 @@
 - 은닉층(Hidden Layer): 입력층과 출력층 사이에 위치하며, 데이터의 특징을 학습합니다. 딥러닝에서는 여러 개의 은닉층을 사용하여 복잡한 패턴을 학습합니다.
 - 출력층(Output Layer): 최종 결과를 출력하는 층입니다. 문제의 종류에 따라 분류(classification)나 회귀(regression) 결과를 출력합니다.
 
+<img width="602" alt="스크린샷 2024-08-01 오전 9 06 59" src="https://github.com/user-attachments/assets/ad12cedf-910c-4a1f-8b96-f00a9b87c2e4">
+<img width="626" alt="스크린샷 2024-08-01 오전 9 07 22" src="https://github.com/user-attachments/assets/c4a1cd95-04df-4006-b2bf-6371c88d2343">
+
 3. 뉴런의 작동 원리
 - 뉴런은 여러 입력 값을 받아 가중치(Weight)를 곱한 후, 이 값들을 모두 더하여 하나의 값으로 만듭니다. 이 값을 활성화 함수(Activation Function)에 통과시켜 최종 출력을 만듭니다. 활성화 함수는 뉴런이 출력할 값을 결정하는데, 비선형성을 도입하여 신경망이 복잡한 패턴을 학습할 수 있게 합니다.
 
