--- a/5강/03 자료.md
+++ b/5강/03 자료.md
@@ -70,7 +70,7 @@
 <img width="518" alt="스크린샷 2024-08-01 오전 12 26 23" src="https://github.com/user-attachments/assets/93f98954-1afc-4429-ac87-781f8e61f2ee">
 <img width="508" alt="스크린샷 2024-08-01 오전 12 26 35" src="https://github.com/user-attachments/assets/72d4ef13-4e3c-49ed-825b-d2bf873d487b">
 
-### 뇌를 본딴 뉴럴네트워크 (컴퓨터가 사람처럼 생각하겠냐?)
+### 뇌를 본딴 뉴럴네트워크
 
 - 뉴런 시냅스
 <img width="906" alt="스크린샷 2024-08-01 오전 12 27 33" src="https://github.com/user-attachments/assets/ea983622-f59d-49e9-bd46-218633ff3802">
@@ -93,7 +93,7 @@
 <img width="519" alt="스크린샷 2024-08-01 오전 12 32 07" src="https://github.com/user-attachments/assets/a0f646b8-79fa-4492-9c9b-140ad1ddf690">
 
 
-### 손실함수 (loss function) 로 컴퓨터에게 오차를 알려줘야함
+### 손실함수 (loss function)
 
 - 히든 레이어
 - 각 요소는 '노드'라고 부르며, 이 노드들은 숫자로 표현 (노드의 값은 이전 노드들과의 연결을 통해 계산)
@@ -115,7 +115,7 @@
 <img width="279" alt="스크린샷 2024-08-01 오전 12 38 25" src="https://github.com/user-attachments/assets/b4d9c3bf-19b9-48ce-b76a-38b7fbab6a1f">
 <img width="394" alt="스크린샷 2024-08-01 오전 12 38 45" src="https://github.com/user-attachments/assets/2ce41dfb-4fe8-4b56-9e7a-daca1d5fb164">
 
-### 활성함수가 없으면 뉴럴네트워크가 아님 (Activation Function)
+### 활성함수가 없으면 뉴럴네트워크가 아님
 
 <img width="525" alt="스크린샷 2024-08-01 오전 12 39 31" src="https://github.com/user-attachments/assets/a2b51419-0426-481d-a3ca-c29ac34671a0">
 <img width="878" alt="스크린샷 2024-08-01 오전 12 39 57" src="https://github.com/user-attachments/assets/1bf5b54c-faad-402d-9daa-753b83506adc">
@@ -144,188 +144,131 @@
 <img width="556" alt="스크린샷 2024-08-01 오전 12 44 15" src="https://github.com/user-attachments/assets/33853ce9-702b-4925-a0da-3ebae9ef7222">
 
 ### 신나는 경사하강법
+
+<img width="511" alt="스크린샷 2024-08-01 오전 1 30 30" src="https://github.com/user-attachments/assets/67bd9c0c-a4ed-4223-b1a4-1c10f40677f4">
+<img width="520" alt="스크린샷 2024-08-01 오전 1 30 16" src="https://github.com/user-attachments/assets/931e4db6-e294-4482-8c9f-162232a998a8">
+
 지난 시간까지 강의를 잘 들으셨다면, 이제 뉴럴 네트워크를 통해 예측 값을 계산하는 방법을 이해하셨을 겁니다. 예를 들어, 6월 성적과 같은 데이터를 입력하면, 가중치 
-𝑤
-w 를 곱하여 
-ℎ
-1
-h 
-1
-​
-  값을 만들어냅니다. 그러나 이 값을 그대로 다음으로 전달하는 것이 아니라, 시그모이드 함수와 같은 활성화 함수에 넣어 변환합니다. 이를 통해 변환된 값을 다음 노드로 전달하며, 최종 예측 값을 도출합니다.
+w 를 곱하여 h1값을 만들어냅니다. 그러나 이 값을 그대로 다음으로 전달하는 것이 아니라, 시그모이드 함수와 같은 활성화 함수에 넣어 변환합니다. 이를 통해 변환된 값을 다음 노드로 전달하며, 최종 예측 값을 도출합니다.
+- 예측값
+<img width="497" alt="스크린샷 2024-08-01 오전 1 31 28" src="https://github.com/user-attachments/assets/a00e1ee7-1c68-4add-9a8a-1278c63b445c">
+<img width="504" alt="스크린샷 2024-08-01 오전 1 32 04" src="https://github.com/user-attachments/assets/f1dc5018-35a8-434e-92a4-aecbfe8c7137">
 
-이 예측 값을 실제 값과 비교하여 오차를 계산하고, 오차를 최소화하는 가중치 
-𝑤
-w 값을 찾으면 모델의 정확도가 높아집니다. 컴퓨터가 이 과정을 통해 최적의 
-𝑤
-w 값을 찾는 방법을 간단히 설명해드리겠습니다.
+- 오차를 최소화하는 가중치 w 값 찾기
+<img width="828" alt="스크린샷 2024-08-01 오전 1 32 26" src="https://github.com/user-attachments/assets/0fb05cb9-5e59-4cd3-839e-4151a16b6460">
+<img width="425" alt="스크린샷 2024-08-01 오전 1 32 59" src="https://github.com/user-attachments/assets/ce0001ab-875b-47fd-8fa4-9ec8e92f6224">
 
-예를 들어, 
-𝑤
-1
-w 
-1
-​
-  하나만 생각해봅시다. 
-𝑤
-1
-w 
-1
-​
- , 
-𝑤
-2
-w 
-2
-​
-  외에도 여러 가중치가 있지만, 단순화를 위해 
-𝑤
-1
-w 
-1
-​
-  만 고려하겠습니다. 만약 
-𝑤
-1
-w 
-1
-​
-  에 다양한 값을 대입해보면, 총 손실 값이 어떻게 변하는지 알 수 있습니다. 예를 들어, 
-𝑤
-1
-w 
-1
-​
-  의 값이 3일 때의 총 손실을 계산한 후, 손실 값을 최소화하는 방향으로 
-𝑤
-1
-w 
-1
-​
-  을 조정해야 합니다. 이를 위해 경사 하강법(Gradient Descent) 이라는 알고리즘을 사용합니다.
+- 흐름
+<img width="413" alt="스크린샷 2024-08-01 오전 1 33 13" src="https://github.com/user-attachments/assets/5a3fa1d3-35cc-4a5b-adba-c41d09d46be3">
+<img width="413" alt="스크린샷 2024-08-01 오전 1 33 49" src="https://github.com/user-attachments/assets/514fcace-cf79-4fe7-8c4c-fa6074fd5f7e">
+<img width="413" alt="스크린샷 2024-08-01 오전 1 34 02" src="https://github.com/user-attachments/assets/a0319562-60cd-46f9-8f04-0420eea23479">
 
-경사 하강법은 가중치가 증가하거나 감소하는 방향을 결정하는 방법입니다. 이를 위해 현재 
-𝑤
-w 값에서 접선의 기울기를 계산합니다. 예를 들어, 
-𝑤
-1
-w 
-1
-​
-  이 3일 때 기울기가 1이라면, 
-𝑤
-1
-w 
-1
-​
-  을 감소시키는 방향으로 조정해야 합니다. 이 과정은 단순히 기울기를 빼는 것이 아니라, 러닝 레이트(Learning Rate) 라는 상수를 곱하여 조정합니다. 러닝 레이트는 가중치 조정의 크기를 결정하며, 너무 크면 최적점을 지나칠 수 있고, 너무 작으면 학습이 느려질 수 있습니다.
+- 경사하강법
+<img width="812" alt="스크린샷 2024-08-01 오전 1 34 23" src="https://github.com/user-attachments/assets/217ac37e-a981-4ace-9f90-50cad329fc66">
+<img width="420" alt="스크린샷 2024-08-01 오전 1 35 12" src="https://github.com/user-attachments/assets/4ae0a7dc-aaff-4893-aa8d-703dd72ea291">
+<img width="428" alt="스크린샷 2024-08-01 오전 1 35 27" src="https://github.com/user-attachments/assets/8d76b940-0225-492d-bb0c-17bee7f49e75">
+<img width="438" alt="스크린샷 2024-08-01 오전 1 35 36" src="https://github.com/user-attachments/assets/62baf5c2-ea4f-47fc-b67a-24253aec18c4">
 
-이 과정을 반복하면서 최적의 
-𝑤
-w 값을 찾아내는 것이 머신 러닝의 학습 과정입니다. 최적의 
-𝑤
-w 값을 찾기 위해 경사 하강법을 사용하는데, 이때 사용되는 러닝 레이트는 적절히 조정해야 합니다. 이는 실험적으로 설정하며, 일반적으로 0.01 또는 0.001과 같은 소숫점 값을 사용합니다.
+- 기울기 1
+<img width="423" alt="스크린샷 2024-08-01 오전 1 35 55" src="https://github.com/user-attachments/assets/792219e6-709f-4e89-a607-8e7cb9bdf1be">
 
-또한, 러닝 레이트는 일정하게 유지하는 대신, 학습이 진행됨에 따라 동적으로 조정할 수 있습니다. 이를 위해 옵티마이저(Optimizer) 라는 알고리즘을 사용합니다. 예를 들어, 모멘텀(Momentum) 은 관성을 적용하여 빠르게 수렴할 수 있도록 도와주며, 아다그라드(Adagrad) 와 아담(Adam) 은 학습 속도를 자동으로 조정해주는 알고리즘입니다. 이 중에서도 아담은 대부분의 상황에서 좋은 결과를 제공하는 편입니다.
+- 기울기 -1
+<img width="426" alt="스크린샷 2024-08-01 오전 1 36 09" src="https://github.com/user-attachments/assets/afbf1242-95c4-4253-869d-6882157bee9f">
+<img width="412" alt="스크린샷 2024-08-01 오전 1 36 29" src="https://github.com/user-attachments/assets/0e73d10f-615f-4510-9219-16a94de5fd16">
 
-마지막으로, 기울기라는 개념을 2차원 그래프에서 설명했지만, 실제로는 고차원 공간에서 이루어집니다. 이로 인해 직접적으로 시각화하기 어려운 경우가 많습니다. 따라서, 보다 정확하게 표현하자면, 
-𝑤
-1
-w 
-1
-​
-  의 작은 변화가 손실 값에 얼마나 영향을 미치는지를 계산하여 빼는 것입니다. 이러한 과정은 텐서플로와 같은 라이브러리가 자동으로 처리해주므로, 코드를 작성하는 데 직접적으로 계산할 필요는 없습니다.
+- 경사하강법 정리
+<img width="883" alt="스크린샷 2024-08-01 오전 1 37 35" src="https://github.com/user-attachments/assets/c2de4f0a-b65e-497c-9e30-0ffba1bd2119">
+<img width="368" alt="스크린샷 2024-08-01 오전 1 38 09" src="https://github.com/user-attachments/assets/ae13c598-24e8-4784-b7fa-630e35751d80">
+<img width="902" alt="스크린샷 2024-08-01 오전 1 38 30" src="https://github.com/user-attachments/assets/9fc8b2b0-8259-4c97-8991-7b9fe248342b">
+<img width="730" alt="스크린샷 2024-08-01 오전 1 38 40" src="https://github.com/user-attachments/assets/6b44fa8b-1683-4117-bafd-b2f8b9827a6e">
+<img width="467" alt="스크린샷 2024-08-01 오전 1 40 35" src="https://github.com/user-attachments/assets/ef9e726b-50b6-442e-ab09-28df515eb9ac">
 
-이 강의에서는 뉴럴 네트워크의 학습 과정과 경사 하강법의 기본 개념을 설명했습니다. 다음 강의에서는 더 깊이 있는 내용을 다룰 예정이니, 관심 있는 분들은 계속해서 시청해 주세요.
+- 기울기 0
+<img width="438" alt="스크린샷 2024-08-01 오전 1 39 24" src="https://github.com/user-attachments/assets/83b41d4e-b049-4d0a-be1d-a52580d606dd">
+<img width="433" alt="스크린샷 2024-08-01 오전 1 39 38" src="https://github.com/user-attachments/assets/65c5c5d6-9a4a-4f48-ac0b-8b3cc413f9c7">
+<img width="795" alt="스크린샷 2024-08-01 오전 1 39 53" src="https://github.com/user-attachments/assets/24654ee0-efb3-44b6-b3f9-e82f3ca89b14">
+<img width="347" alt="스크린샷 2024-08-01 오전 1 40 12" src="https://github.com/user-attachments/assets/fa669c44-6e82-407b-9467-aa109f3528d0">
+
+- 가짜 최저점
+<img width="921" alt="스크린샷 2024-08-01 오전 1 40 59" src="https://github.com/user-attachments/assets/e9dc5483-bc4b-4844-8594-04d5ff5b5f0c">
+<img width="929" alt="스크린샷 2024-08-01 오전 1 41 22" src="https://github.com/user-attachments/assets/c84c0e8d-0c86-4d61-8eaa-f1dbacac9463">
+<img width="355" alt="스크린샷 2024-08-01 오전 1 41 41" src="https://github.com/user-attachments/assets/25e09b3d-a090-42b1-8956-a8c2e1a76626">
+<img width="543" alt="스크린샷 2024-08-01 오전 1 41 53" src="https://github.com/user-attachments/assets/4d41128e-b91b-4e89-9942-ac1b4d04afd4">
+
+- 옵티마이저
+<img width="915" alt="스크린샷 2024-08-01 오전 1 42 12" src="https://github.com/user-attachments/assets/14405e67-b4d9-499a-ba12-d00c7c5c795f">
+
+
+<img width="397" alt="스크린샷 2024-08-01 오전 1 42 40" src="https://github.com/user-attachments/assets/e89d2fd2-197e-4013-8ac4-34ced20e7c39">
 
 ### Tensorflow 2 기초 빠르게 정리
 
-오늘은 텐서플로우의 기초 중의 기초인 텐서(Tensor) 라는 자료형에 대해 알아보겠습니다. 텐서플로우가 설치되어 있다면, 파이썬 파일을 하나 만들어 텐서에 대해 실습해보겠습니다.
-
-먼저, 텐서라는 변수를 만들어보겠습니다. tf.constant라는 함수를 사용하여 다음과 같이 작성해보세요:
-
-python
-코드 복사
+```python
 import tensorflow as tf
 
 tensor = tf.constant([1, 2, 3])
 print(tensor)
-이 코드를 저장하고 터미널에서 python tensor.py라고 입력하여 파일을 실행해보면, 텐서의 출력 결과가 나옵니다. 텐서플로우 실행 시 처음에는 경고 메시지가 나올 수 있지만, 에러만 없다면 문제 없습니다.
+```
 
-이렇게 만든 텐서는 텐서플로우에서 가장 기본적인 자료형입니다. 파이썬의 리스트나 숫자 자료형과 유사하지만, 텐서플로우에서는 이를 텐서라고 부릅니다. 텐서를 만들 때는 숫자나 리스트를 포함하여 여러 가지 형식을 사용할 수 있습니다.
-
-텐서를 배워야 하는 이유는 간단합니다. 머신러닝에서는 다양한 연산을 수행해야 하며, 특히 많은 데이터와 가중치를 다룰 때 매우 유용합니다. 예를 들어, 입력값 
-𝑥
-1
-x 
-1
-​
- , 
-𝑥
-2
-x 
-2
-​
- , 
-𝑥
-3
-x 
-3
-​
- 에 각각의 가중치 
-𝑤
-1
-w 
-1
-​
- , 
-𝑤
-2
-w 
-2
-​
- , 
-𝑤
-3
-w 
-3
-​
- 를 곱하여 새로운 노드를 만드는 과정에서 수많은 연산이 필요합니다. 이때, 텐서를 이용하면 복잡한 연산을 간단하게 수행할 수 있습니다.
-
-텐서는 행렬과 유사한 구조를 가지며, 여러 숫자를 한 번에 처리할 수 있습니다. 예를 들어, 다음과 같이 텐서 두 개를 더해보겠습니다:
+- 텐서가 필요한 이유
+  - 행렬로 인풋/w값 저장 가능
+  - node 값 계산식 쉬워짐
+<img width="599" alt="스크린샷 2024-08-01 오전 7 52 49" src="https://github.com/user-attachments/assets/e7a4f86c-034d-4ee9-b6a6-f67bbd9edadd">
 
 ```python
 tensor1 = tf.constant([1, 2, 3])
 tensor2 = tf.constant([4, 5, 6])
 result = tf.add(tensor1, tensor2)
 print(result)
+print(tensor1 + tensor2)
+# add, subtract, divide, multiply
+# matmul : A와 B행렬의 곱 (AB) - dot product
 ```
-이 코드를 실행하면 각각의 요소가 더해진 결과를 출력합니다. 텐서 연산은 이렇게 간단하게 수행할 수 있습니다. 텐서 연산에는 더하기, 빼기, 곱하기 등의 다양한 연산이 포함됩니다.
 
-다음으로, 다차원 텐서에 대해 알아보겠습니다. 텐서는 리스트 안에 리스트를 포함하여 다차원 구조를 가질 수 있습니다. 예를 들어, 다음과 같이 2차원 텐서를 만들 수 있습니다:
+<img width="452" alt="스크린샷 2024-08-01 오전 7 57 11" src="https://github.com/user-attachments/assets/35f07e60-0101-497a-9388-23811355a5d7">
 
+- 2차원 텐서
 ```python
 tensor3 = tf.constant([[1, 2], [3, 4]])
 print(tensor3)
 ```
-이 코드는 2행 2열의 텐서를 생성합니다. 이처럼 텐서는 다양한 차원과 모양으로 만들 수 있습니다. 텐서의 모양(shape)을 확인하기 위해 다음과 같이 코드를 작성할 수 있습니다:
 
+- 텐서의 차원
 ```python
 print(tensor3.shape)
 ```
-이 코드를 실행하면 텐서의 차원을 알려주는 (2, 2)와 같은 결과가 출력됩니다. 이는 2개의 차원과 각 차원의 크기를 의미합니다. 텐서의 모양은 데이터 분석 시 매우 중요한 정보입니다.
 
-또한, 텐서의 데이터 타입도 중요한 요소입니다. 텐서의 데이터 타입은 dtype 속성을 통해 확인할 수 있습니다. 예를 들어, 정수를 저장하면 int32, 실수를 저장하면 float32와 같이 나타납니다. 보통 딥러닝에서는 실수 자료형을 주로 사용합니다.
-
-마지막으로, 변수(Variable) 라는 특별한 텐서 유형에 대해 알아보겠습니다. 변수를 사용하면 텐서의 값을 변경할 수 있습니다. 예를 들어, 가중치와 같은 값을 저장하고 싶을 때 변수를 사용할 수 있습니다.
-
+- 0만 담긴 텐서
 ```python
-variable = tf.Variable([1.0, 2.0, 3.0])
-print(variable)
+tensor4 = tf.zeros(10)
+print(tensor4)
+tensor4 = tf.zeros([2,2])
+print(tensor4)
+tensor4 = tf.zeros([2,2,3])
+print(tensor4)
 ```
-변수는 tf.constant와는 달리 값을 수정할 수 있으며, variable.assign(new_value)를 통해 값을 변경할 수 있습니다.
 
-지금까지 텐서플로우의 기본적인 텐서 자료형에 대해 알아보았습니다. 이 내용은 딥러닝과 뉴럴 네트워크의 기초를 이해하는 데 중요한 역할을 합니다. 앞으로의 강의에서는 이 개념을 바탕으로 실제 뉴럴 네트워크를 구축하고 학습하는 방법에 대해 다룰 예정이니, 계속해서 시청해 주세요.
+- 데이터 타입
+  - 정수 : int
+  - 실수 : float (딥러닝)
+```python
+
+tensor1 = tf.constant([1.0, 2, 3])
+tensor2 = tf.constant([4, 5, 6], tf.float32)
+tensor3 = tf.constant([[1, 2], [3, 4]])
+print(tensor3)
+```
+
+- 변수(Variable)
+  - 값 수정 가능
+```python
+w = tf.Variable(1.0)
+print(w)
+print(w.numpy())
+w2 = tf.Variable([1.0, 2.0, 3.0])
+print(w2)
+w.assign(2)
+```
 
 ### Tensorflow 2로 해보는 간단한 Linear Regression 선형회귀 예측
 
