--- a/5강/03 자료.md
+++ b/5강/03 자료.md
@@ -271,59 +271,100 @@ w.assign(2)
 ```
 
 ### Tensorflow 2로 해보는 간단한 Linear Regression 선형회귀 예측
-
-이제 본격적으로 실전 프로젝트로 넘어가기 전에, 텐서플로우에서 딥러닝이 어떤 식으로 이루어지는지 간단한 수학 문제를 통해 설명해 드리겠습니다. 예를 들어, 사람들의 키와 신발 사이즈 데이터를 수집했다고 가정해봅시다. 각 사람의 키와 신발 사이즈가 다음과 같이 주어졌습니다:
-
+```
 키: 170cm, 신발 사이즈: 260
 키: 180cm, 신발 사이즈: 270
 ...
-이 데이터를 기반으로, 키와 신발 사이즈 사이의 관계를 찾아보겠습니다. 우리는 다음과 같은 식을 세울 수 있습니다:
+```
 
 `신발 사이즈 = a×키+b`
 
-여기서 a와 b는 찾고자 하는 미지수입니다. 예를 들어, 키가 170cm인 사람이 신발 사이즈가 260이라고 한다면, 우리는 이 데이터를 바탕으로 a와 b를 구할 수 있습니다.
+```python
+height = [170, 180, 175, 160]
+shoe = [260, 270, 265, 255]
 
-이 문제를 풀기 위해, 다음과 같이 간단한 모델을 설정해보겠습니다. 키가 170cm이고, 신발 사이즈가 260인 데이터를 사용하여 예측 모델을 만들어보겠습니다.
+??? = a*height + b
+```
 
-먼저, 텐서플로우에서 변수를 정의합니다:
+![스크린샷 2024-08-01 오후 3 09 14](https://github.com/user-attachments/assets/3576a8f2-343d-4072-8da2-0c25fb5e6643)
+![스크린샷 2024-08-01 오후 3 09 41](https://github.com/user-attachments/assets/c7257768-416d-4a2f-a403-d1d08d7beca3)
 
+- tf.Variable을 사용하여 초기값을 설정
 ```python
 import tensorflow as tf
+
+height = 170
+shoe = 260
+
+# shoe = a * height + b
 
 a = tf.Variable(0.1)
 b = tf.Variable(0.2)
 ```
-tf.Variable을 사용하여 초기값을 설정하고, 경사 하강법을 통해 학습을 진행할 수 있도록 합니다. 이제 옵티마이저를 정의해보겠습니다:
 
+- 경사 하강법을 통해 학습을 진행
+  - 옵티마이저 정의
 ```python
-optimizer = tf.keras.optimizers.Adam(learning_rate=0.15)
+optimizer = tf.keras.optimizers.Adam(learning_rate=0.1)
+# Adam 옵티마이저는 경사 하강법을 이용하여 변수들을 업데이트
 ```
-Adam 옵티마이저는 경사 하강법을 이용하여 변수들을 업데이트해줍니다. 이어서, 손실 함수를 정의합니다. 손실 함수는 예측 값과 실제 값 사이의 오차를 계산하는 함수입니다. 여기서는 간단히 평균 제곱 오차(MSE)를 사용합니다:
+
+- 손실 함수 정의
+  - 예측 값과 실제 값 사이의 오차를 계산하는 함수
+  - 평균 제곱 오차(MSE)를 사용
 
 ```python
 def loss_fn():
-    y_pred = a * 170 + b
-    y_true = 260
-    return tf.square(y_pred - y_true)
+    # return 실제값 - 예측값
+    y_pred = a * height + b
+    y_true = shoe
+    return tf.square(y_pred - y_true) # 제곱 계산
+...
+opt.minizize(loss_fn, var_list=[a, b]) # 경사하강 1번 (a, b 가 1번 수정됨)
 ```
+
 이제 경사 하강법을 적용하여 학습을 진행합니다. 이를 위해 옵티마이저의 apply_gradients 메소드를 사용합니다:
 
+- 반복
 ```python
-for _ in range(300):
+for i in range(300):
     optimizer.minimize(loss_fn, var_list=[a, b])
     print(a.numpy(), b.numpy())
 ```
-이 코드는 300번의 반복을 통해 최적의 a와 b 값을 찾습니다. 최종적으로, a와 b 값이 업데이트되면서 점점 더 정확한 예측 모델이 형성됩니다.
 
-이렇게 학습이 완료되면, 우리는 새로운 키 값을 입력하여 신발 사이즈를 예측할 수 있습니다. 예를 들어, 키가 180cm인 사람의 신발 사이즈를 예측해보면 다음과 같습니다:
-
+- 결과 확인
 ```python
 predicted_shoe_size = a.numpy() * 180 + b.numpy()
 print(predicted_shoe_size)
 ```
-이렇게 간단한 선형 모델을 사용하여 키와 신발 사이즈 사이의 관계를 예측할 수 있습니다. 물론, 실제로는 더 복잡한 모델과 데이터를 다루게 되지만, 이 예제는 기본적인 개념을 이해하는 데 도움을 줄 것입니다.
 
-이후에는 더 많은 데이터를 사용하여 보다 복잡한 모델을 학습시키는 방법을 다룰 예정입니다. 이 강의는 가벼운 마음으로 참고하시고, 더 진보된 딥러닝 모델에 대해 배울 준비를 해보세요.
+- 최종
+```python
+import tensorflow as tf
+
+height = 170
+shoe = 260
+# shoe = a * height + b
+
+a = tf.Variable(0.1)
+b = tf.Variable(0.2)
+
+def loss_fn():
+    # return 실제값 - 예측값
+    y_pred = a * height + b
+    y_true = shoe
+    return tf.square(y_pred - y_true)
+
+optimizer = tf.keras.optimizers.Adam(learning_rate=0.1)
+opt.minizize(loss_fn, var_list=[a, b]) # 경사하강 1번 (a, b 가 1번 수정됨)
+
+for i in range(300):
+    optimizer.minimize(loss_fn, var_list=[a, b])
+    print(a.numpy(), b.numpy())
+
+predicted_shoe_size = a.numpy() * 180 + b.numpy()
+print(predicted_shoe_size)
+```
 
 ### 대학 합격 예측 AI 만들기 (풀버전)
 #### (Part 1) Keras로 모델 만들기
