--- a/5강/03 자료.md
+++ b/5강/03 자료.md
@@ -368,20 +368,24 @@ print(predicted_shoe_size)
 
 ### 대학 합격 예측 AI 만들기 (풀버전)
 #### (Part 1) Keras로 모델 만들기
-안녕하세요! 첫 번째 프로젝트로 딥러닝 모델을 만들어보겠습니다. 이번에는 학점과 영어 성적 데이터를 이용해 대학원 입학 여부를 예측해보려고 합니다. 첨부 파일을 보시면 여러 사람의 대학원 입학 정보가 있습니다. 예를 들어, 어떤 사람은 영어 성적이 380점이고 학점이 3.2점이며 랭크 3인 대학교에 지원했다고 가정합시다. 그리고 '어드미션'이라는 열에는 이 사람이 합격했는지 여부가 기록되어 있습니다. 1은 합격, 0은 불합격을 의미합니다.
 
-이 데이터를 이용해 학습을 시키고, 새로운 학생이 주어진 조건에서 입학할 확률을 예측하는 모델을 만들어보겠습니다. 목표는 학점과 영어 성적, 대학교 랭크를 입력하면 합격 확률을 예측하는 것입니다.
+- 대학 합격 데이터
+  - admit : 1은 합격, 0은 불합격
+  - gre : 영어성적
+  - gpa : 학점
+  - rank : 지원한 대학 수준
+![스크린샷 2024-08-01 오후 3 50 36](https://github.com/user-attachments/assets/65a84962-844d-4bab-9c09-a907a48edf3e)
 
-1. 프로젝트 설정
-먼저, Python 파일을 생성하고 필요한 라이브러리를 임포트합니다:
+- 딥러닝으로 합격 확률 구하기
 
+- 프로젝트 설정
 ```python
 import tensorflow as tf
 from tensorflow.keras import layers
+# keras 텐서플로우에 포함된 고수준 API로, 딥러닝 모델을 쉽게 만들 수 있음
 ```
-Keras는 텐서플로우에 포함된 고수준 API로, 딥러닝 모델을 쉽게 만들 수 있게 도와줍니다. 이제 딥러닝 모델을 구성해보겠습니다. 모델은 여러 개의 레이어로 구성되며, 각 레이어는 노드로 구성됩니다. 이때, 각 레이어의 노드 수는 사용자가 지정할 수 있습니다.
 
-2. 모델 구성
+- 모델 구성
 ```python
 model = tf.keras.Sequential([
     layers.Dense(64, activation='relu'),
@@ -389,6 +393,7 @@ model = tf.keras.Sequential([
     layers.Dense(1, activation='sigmoid')
 ])
 ```
+
 위 코드에서 첫 번째 레이어는 64개의 노드로 구성되고, 두 번째 레이어는 128개의 노드로 구성됩니다. 마지막 레이어는 1개의 노드로 구성되며, 0과 1 사이의 확률 값을 출력하는 sigmoid 활성화 함수를 사용합니다.
 
 3. 모델 컴파일
