--- a/5강/03 자료.md
+++ b/5강/03 자료.md
@@ -143,13 +143,11 @@
 - 출력값 
 <img width="556" alt="스크린샷 2024-08-01 오전 12 44 15" src="https://github.com/user-attachments/assets/33853ce9-702b-4925-a0da-3ebae9ef7222">
 
-### 신나는 경사하강법
+### 경사하강법
 
 <img width="511" alt="스크린샷 2024-08-01 오전 1 30 30" src="https://github.com/user-attachments/assets/67bd9c0c-a4ed-4223-b1a4-1c10f40677f4">
 <img width="520" alt="스크린샷 2024-08-01 오전 1 30 16" src="https://github.com/user-attachments/assets/931e4db6-e294-4482-8c9f-162232a998a8">
 
-지난 시간까지 강의를 잘 들으셨다면, 이제 뉴럴 네트워크를 통해 예측 값을 계산하는 방법을 이해하셨을 겁니다. 예를 들어, 6월 성적과 같은 데이터를 입력하면, 가중치 
-w 를 곱하여 h1값을 만들어냅니다. 그러나 이 값을 그대로 다음으로 전달하는 것이 아니라, 시그모이드 함수와 같은 활성화 함수에 넣어 변환합니다. 이를 통해 변환된 값을 다음 노드로 전달하며, 최종 예측 값을 도출합니다.
 - 예측값
 <img width="497" alt="스크린샷 2024-08-01 오전 1 31 28" src="https://github.com/user-attachments/assets/a00e1ee7-1c68-4add-9a8a-1278c63b445c">
 <img width="504" alt="스크린샷 2024-08-01 오전 1 32 04" src="https://github.com/user-attachments/assets/f1dc5018-35a8-434e-92a4-aecbfe8c7137">
@@ -323,8 +321,6 @@ def loss_fn():
 opt.minizize(loss_fn, var_list=[a, b]) # 경사하강 1번 (a, b 가 1번 수정됨)
 ```
 
-이제 경사 하강법을 적용하여 학습을 진행합니다. 이를 위해 옵티마이저의 apply_gradients 메소드를 사용합니다:
-
 - 반복
 ```python
 for i in range(300):
@@ -378,36 +374,74 @@ print(predicted_shoe_size)
 
 - 딥러닝으로 합격 확률 구하기
 
+1. 딥러닝 model 디자인
+
 - 프로젝트 설정
 ```python
 import tensorflow as tf
 from tensorflow.keras import layers
+
 # keras 텐서플로우에 포함된 고수준 API로, 딥러닝 모델을 쉽게 만들 수 있음
+tf.keras.Sequential([
+  레이어1,
+  레이어2,
+  레이어3
+]) # 딥러닝 모델
 ```
+<img width="625" alt="스크린샷 2024-08-02 오전 12 42 21" src="https://github.com/user-attachments/assets/0e246cab-efe2-440f-b3ff-ae194265d431">
 
 - 모델 구성
 ```python
+model = tf.keras.Sequential([
+    layers.Dense(64), # 레이어 갯수/노드 갯수 적절히
+    layers.Dense(128),
+    layers.Dense(1) #  마지막 레이어는 1개의 노드 (예측 결과)
+])
+```
+```python
+# 레이어에 activation function 넣기
+# sigmoid, tanh, relu, softmax, leakyRelu
 model = tf.keras.Sequential([
     layers.Dense(64, activation='relu'),
     layers.Dense(128, activation='relu'),
     layers.Dense(1, activation='sigmoid')
 ])
+# 0과 1 사이의 확률 값을 출력하는 sigmoid 선택
 ```
+<img width="306" alt="스크린샷 2024-08-02 오전 12 46 55" src="https://github.com/user-attachments/assets/3b83ad1a-ffe4-489f-add5-111f9bef379e">
 
-위 코드에서 첫 번째 레이어는 64개의 노드로 구성되고, 두 번째 레이어는 128개의 노드로 구성됩니다. 마지막 레이어는 1개의 노드로 구성되며, 0과 1 사이의 확률 값을 출력하는 sigmoid 활성화 함수를 사용합니다.
+- 마지막 출력 결과가 0.2 => 입학확률 20%
+- 마지막 출력 결과가 0.9 => 입학확률 90%
 
-3. 모델 컴파일
-모델을 컴파일할 때는 옵티마이저, 손실 함수, 메트릭스를 정의합니다.
+2. 모델 컴파일
 
+- 모델을 컴파일할 때는 옵티마이저, 손실 함수, 메트릭스를 정의
 ```python
+model.compile(optimizer=???, loss=???, metrics=['accuracy'])
+
+# adam, adagrad, adadelta, rmsprop, sgd 등
 model.compile(optimizer='adam', loss='binary_crossentropy', metrics=['accuracy'])
 ```
-옵티마이저: 경사 하강법을 사용해 모델을 학습시킵니다. adam 옵티마이저는 일반적으로 좋은 성능을 보입니다.
-손실 함수: binary_crossentropy를 사용해 0과 1 사이의 확률을 예측합니다.
-메트릭스: 모델의 성능을 평가하는 기준으로, 여기서는 정확도(accuracy)를 사용합니다.
+= 옵티마이저: 경사 하강법을 사용해 모델을 학습. (adam 옵티마이저는 일반적으로 좋은 성능을 가짐)
+- 손실 함수: binary_crossentropy를 사용해 0과 1 사이의 확률을 예측.
+- 메트릭스: 모델의 성능을 평가하는 기준으로, 여기서는 정확도(accuracy)를 사용.
+<img width="777" alt="스크린샷 2024-08-02 오전 12 53 01" src="https://github.com/user-attachments/assets/e0ad09ae-3661-4fb2-9ffa-c7fadda51e1b">
+<img width="428" alt="스크린샷 2024-08-02 오전 12 54 13" src="https://github.com/user-attachments/assets/fa740d48-c42e-4533-8071-e2cb122cad69">
 
-4. 모델 학습
-이제 모델을 학습시킵니다. 데이터를 준비하여 학습시키는 방법은 다음과 같습니다.
+3. 모델 학습
+
+```python
+model.fit( x데이터, y데이터, epochs=100)
+
+# x데이터 = [ [학생1데이터], [학생2데이터], ... ]
+# x데이터 = [ [380, 3.21, 3], [660, 3.67, 3], [], ... ]
+# y데이터 = [ 정답1, 정답2, 정답3, ...]
+# y데이터 = [ [0], [1], [1], [1], ...]
+```
+- x데이터: 학습 데이터
+- y데이터: 실제 정답
+- epochs: 몇 번 학습할지 정하는 변수
+
 
 #### (Part 2) 데이터 준비하기
 1. 데이터 로드
@@ -415,43 +449,94 @@ model.compile(optimizer='adam', loss='binary_crossentropy', metrics=['accuracy']
 import pandas as pd
 
 data = pd.read_csv('admission_data.csv')
+print(data)
+
+# exit()
 ```
-Pandas를 사용하여 CSV 파일을 읽어옵니다. CSV 파일에는 학점, 영어 성적, 대학교 랭크, 입학 여부 등의 정보가 담겨 있습니다.
 
 2. 데이터 전처리
-데이터를 학습시키기 전에 결측치를 처리하고 필요한 부분을 추출합니다.
-
+- 데이터를 학습시키기 전에 결측치를 처리하고 필요한 부분을 추출합니다.
+- 빈 부분은 평균값을 넣거나, 행을 삭제하거나 어떻게 처리할지 선택
 ```python
+# 빈 칸 확인
+print(data.isnull().sum())
+
+# 빈 칸 or NaN 있는 행을 제거
 data = data.dropna()
+# data.fillna(100) 빈칸을 100으로 세팅
+
+print(data.isnull().sum())
 ```
 이 코드는 데이터에서 결측치가 있는 행을 제거합니다. 필요에 따라 결측치를 특정 값으로 채울 수도 있습니다.
 
+- 참고
+```
+print(data['gpa'])
+print(data['gpa'].min())
+print(data['gpa'].max())
+print(data['gpa'].count())
+```
+
 3. 데이터 준비
-모델에 입력할 X 데이터와 출력할 y 데이터를 준비합니다.
+- 모델에 입력할 X 데이터와 출력할 y 데이터를 준비
 
 ```python
-X = data[['GRE Score', 'GPA', 'Rank']].values
-y = data['Admission'].values
+# x데이터 = [ [학생1데이터], [학생2데이터], ... ]
+# x데이터 = [ [380, 3.21, 3], [660, 3.67, 3], [], ... ]
+# y데이터 = [ 정답1, 정답2, 정답3, ...]
+# y데이터 = [ [0], [1], [1], [1], ...]
+
+y = data['admit'].values
+print(y)
+
+X = []
+for i, rows in data.iterrows():
+  print(rows)
+  print(rows['gre'])
+  print(rows['gpa'])
+  print(rows['rank'])
+  x.append( [rows['gre'], rows['gpa'], rows['rank'] ] ) # [640, 3.19, 4]
+
+print(x)
 ```
-여기서는 'GRE Score', 'GPA', 'Rank'를 입력 데이터로 사용하고, 'Admission'을 출력 데이터로 사용합니다.
+
 
 ### (Part 3) 학습시키기 & 예측해보기
 1. 모델 학습
-이제 준비된 데이터를 사용해 모델을 학습시킵니다.
+- 이제 준비된 데이터를 사용해 모델을 학습시킵니다.
 
 ```python
-model.fit(X, y, epochs=100)
+model.fit(x, y, epochs=100) # w값 최적화해주세요~
+
+# python list 가 아니라 numpy array, tf tensor 를 넣어야 함
+# 일반 리스트를 numpy array 로 변환해서 넣기
+import numpy as np
+
+model.fit(np.array(x), np.array(y), epochs=100)
 ```
-epochs는 전체 데이터셋을 몇 번 반복해서 학습할 것인지를 결정합니다. 여기서는 100번 학습합니다.
+- Epoch: 몇 번째 epoch 인지
+- 0s: 소요시간
+- loss: 현재 총 손실 (적을수록 좋음)
+- accuracy: 모델의 정답률. 예측 값과 데이터가 얼마나 잘 맞는지 (높을수록 좋음)
+
 
 2. 예측
-모델이 학습된 후, 새로운 데이터를 입력하여 예측을 수행할 수 있습니다.
+- 모델이 학습된 후, 새로운 데이터를 입력하여 예측을 수행
 
 ```python
 new_data = np.array([[750, 3.7, 3], [400, 2.1, 1]])
 predictions = model.predict(new_data)
 print(predictions)
 ```
-predict 메서드를 사용해 새로운 데이터의 입학 확률을 예측합니다. 예를 들어, 첫 번째 데이터는 GRE 750, GPA 3.7, 랭크 3인 학생이 61% 확률로 합격할 것이라고 예측합니다. 두 번째 데이터는 낮은 확률로 불합격할 가능성이 큽니다.
 
-이처럼, Keras와 텐서플로우를 사용해 간단한 딥러닝 모델을 만들고, 학습시키고, 예측할 수 있습니다. 데이터 전처리, 하이퍼파라미터 튜닝 등의 추가적인 작업을 통해 모델의 성능을 더욱 향상시킬 수 있습니다. 이를 통해 여러분은 보다 정확한 예측을 할 수 있는 모델을 만들 수 있습니다.
+- 성능 향식
+  - 데이터 전처리
+  - 모델 튜닝(노드 수, 레이어 수 변경하기)
+
+#### 결론
+딥러닝 AI를 만들기 위해 해야할 일 
+1. 모델 만들기
+2. 데이터 준비하기
+3. 데이터 집어넣고 학습하기
+4. 새로운 데이터 예측하기
+
