--- a/5강/02 스크립트.md
+++ b/5강/02 스크립트.md
@@ -234,16 +234,18 @@ print(predicted_shoe_size)
 import tensorflow as tf
 from tensorflow.keras import layers
 ```
+Sequential 쓰면 신경망 레이어를 쉽게 만들어줍니다.   
 Keras는 텐서플로우에 포함된 고수준 API로, 딥러닝 모델을 쉽게 만들 수 있게 도와줍니다. 이제 딥러닝 모델을 구성해보겠습니다. 모델은 여러 개의 레이어로 구성되며, 각 레이어는 노드로 구성됩니다. 이때, 각 레이어의 노드 수는 사용자가 지정할 수 있습니다.
 
 2. 모델 구성
 ```python
 model = tf.keras.Sequential([
-    layers.Dense(64, activation='relu'),
-    layers.Dense(128, activation='relu'),
+    layers.Dense(64, activation='relu'), # 레이어 갯수/노드 갯수 적절히 -> 결과 잘 나올때까지 실험으로 파악
+    layers.Dense(128, activation='relu'), # 2의 제곱수를 관용적으로 많이 사용함
     layers.Dense(1, activation='sigmoid')
 ])
 ```
+
 위 코드에서 첫 번째 레이어는 64개의 노드로 구성되고, 두 번째 레이어는 128개의 노드로 구성됩니다. 마지막 레이어는 1개의 노드로 구성되며, 0과 1 사이의 확률 값을 출력하는 sigmoid 활성화 함수를 사용합니다.
 
 3. 모델 컴파일
@@ -253,11 +255,24 @@ model = tf.keras.Sequential([
 model.compile(optimizer='adam', loss='binary_crossentropy', metrics=['accuracy'])
 ```
 옵티마이저: 경사 하강법을 사용해 모델을 학습시킵니다. adam 옵티마이저는 일반적으로 좋은 성능을 보입니다.
+- 경사하강법으로 w 값을 구해야하는데, 여기서 기울기만큼 빼서 왔다갔다하는데 기울기를 뺄때 러닝웨이트를 곱해서 뺀다고 했음. 옵티마이저는 이때 적절한 값을 수정하면서 곱하도록 만들어 줌.
 손실 함수: binary_crossentropy를 사용해 0과 1 사이의 확률을 예측합니다.
 메트릭스: 모델의 성능을 평가하는 기준으로, 여기서는 정확도(accuracy)를 사용합니다.
 
-4. 모델 학습
+4. 모델 학습 
 이제 모델을 학습시킵니다. 데이터를 준비하여 학습시키는 방법은 다음과 같습니다.
+
+```python
+model.fit( x데이터, y데이터, epochs=100)
+
+# x데이터 = [ [학생1데이터], [학생2데이터], ... ]
+# x데이터 = [ [380, 3.21, 3], [660, 3.67, 3], [], ... ]
+# y데이터 = [ 정답1, 정답2, 정답3, ...]
+# y데이터 = [ [0], [1], [1], [1], ...]
+```
+- x데이터: 학습 데이터
+- y데이터: 실제 정답
+- epochs: 몇 번 학습할지 정하는 변수
 
 #### (Part 2) 데이터 준비하기
 1. 데이터 로드
@@ -266,6 +281,9 @@ import pandas as pd
 
 data = pd.read_csv('admission_data.csv')
 ```
+- pandas : 파이썬에서 데이터 조작 및 분석을 위한 라이브러리. 데이터 프레임을 사용하여 데이터 전처리와 분석을 쉽게 수행할 수 있습니다.
+- 파이썬으로 엑셀처럼 데이터를 다루고 싶을때 사용합니다.
+
 Pandas를 사용하여 CSV 파일을 읽어옵니다. CSV 파일에는 학점, 영어 성적, 대학교 랭크, 입학 여부 등의 정보가 담겨 있습니다.
 
 2. 데이터 전처리
@@ -278,6 +296,22 @@ data = data.dropna()
 
 3. 데이터 준비
 모델에 입력할 X 데이터와 출력할 y 데이터를 준비합니다.
+
+```python
+# x데이터 = [ [학생1데이터], [학생2데이터], ... ]
+# x데이터 = [ [380, 3.21, 3], [660, 3.67, 3], [], ... ]
+# y데이터 = [ 정답1, 정답2, 정답3, ...]
+# y데이터 = [ [0], [1], [1], [1], ...]
+
+y = data['admit'].values
+print(y)
+
+X = []
+for i, rows in data.iterrows(): # data 라는 dataframe 을 가로 한 줄씩 출력하라
+  print(rows)
+  print(rows['gre'])
+
+```
 
 ```python
 X = data[['GRE Score', 'GPA', 'Rank']].values
