--- a/5강/03 자료.md
+++ b/5강/03 자료.md
@@ -440,7 +440,7 @@ model.fit( x데이터, y데이터, epochs=100)
 ```
 - x데이터: 학습 데이터
 - y데이터: 실제 정답
-- epochs: 몇 번 학습할지 정하는 변수
+- epochs: 전체 데이터셋을 한 번 학습시키는 과정. 몇 번 학습할지 정하는 변수
 
 
 #### (Part 2) 데이터 준비하기
@@ -531,7 +531,8 @@ print(predictions)
 
 - 성능 향식
   - 데이터 전처리
-  - 모델 튜닝(노드 수, 레이어 수 변경하기)
+  - 하이퍼파라미터 튜닝
+    - 모델 학습 과정에서 사용자가 설정해야 하는 매개변수. 예를 들어, 학습률, 에포크 수, 레이어 수 등.
 
 #### 결론
 딥러닝 AI를 만들기 위해 해야할 일 
@@ -539,4 +540,13 @@ print(predictions)
 2. 데이터 준비하기
 3. 데이터 집어넣고 학습하기
 4. 새로운 데이터 예측하기
+
+#### 용어 정리
+- 레이어 (Layer): 신경망의 기본 구성 요소로, 입력 데이터가 입력되고 출력을 생성하는 함수의 모음. 각각의 레이어는 여러 개의 뉴런으로 구성됩니다.
+- 노드 (Node): 신경망 레이어 내의 개별 계산 단위로, 하나의 뉴런이라고도 불립니다. 입력값을 받아 가중치를 곱하고 활성화 함수를 적용해 출력값을 생성합니다.
+- 활성화 함수 (Activation Function): 입력 신호에 비선형성을 추가하여 신경망이 복잡한 패턴을 학습할 수 있도록 돕는 함수. 주요 활성화 함수로는 relu, sigmoid, tanh 등이 있습니다.
+- 시그모이드 함수 (Sigmoid Function): 모든 값을 0과 1 사이로 압축하는 활성화 함수. 주로 확률 값을 예측할 때 사용됩니다.
+- 경사 하강법 (Gradient Descent): 손실 함수의 기울기를 이용하여 가중치를 업데이트하는 최적화 알고리즘. 손실을 최소화하기 위해 학습합니다.
+- 손실 함수 (Loss Function): 모델의 예측값과 실제값 간의 차이를 계산하는 함수. 손실 값이 작을수록 모델의 성능이 좋습니다. 예를 들어, binary_crossentropy는 이진 분류 문제에서 자주 사용됩니다.
+- 옵티마이저 (Optimizer): 경사 하강법을 기반으로 가중치를 업데이트하는 알고리즘. adam, sgd 등이 대표적인 옵티마이저입니다.
 
