--- a/5강/03 자료.md
+++ b/5강/03 자료.md
@@ -550,3 +550,11 @@ print(predictions)
 - 손실 함수 (Loss Function): 모델의 예측값과 실제값 간의 차이를 계산하는 함수. 손실 값이 작을수록 모델의 성능이 좋습니다. 예를 들어, binary_crossentropy는 이진 분류 문제에서 자주 사용됩니다.
 - 옵티마이저 (Optimizer): 경사 하강법을 기반으로 가중치를 업데이트하는 알고리즘. adam, sgd 등이 대표적인 옵티마이저입니다.
 
+### 인공 뉴런(퍼셉트론)
+<img width="695" alt="스크린샷 2024-08-02 오전 1 22 44" src="https://github.com/user-attachments/assets/11de7226-7378-4d4f-87ca-c7a85cd0fd2a">
+
+✔ 입력값과 가중치, 편향을 이용해 출력값을 내는 수학적 모델
+✔ 퍼셉트론을 이용해 만든 모든 구조물을 인공 신경망이라고 부릅니다.
+✔ 퍼셉트론을 하나 사용하면 단층 신경망, 퍼셉트론을 여러개 사용하면 다층 신경망이라 부릅니다.
+
+
