--- a/5강/03 자료.md
+++ b/5강/03 자료.md
@@ -541,6 +541,8 @@ print(predictions)
 3. 데이터 집어넣고 학습하기
 4. 새로운 데이터 예측하기
 
+<img width="719" alt="스크린샷 2024-08-02 오전 1 26 43" src="https://github.com/user-attachments/assets/c41e550c-ff2b-420d-ad34-b146e841c786">
+
 #### 용어 정리
 - 레이어 (Layer): 신경망의 기본 구성 요소로, 입력 데이터가 입력되고 출력을 생성하는 함수의 모음. 각각의 레이어는 여러 개의 뉴런으로 구성됩니다.
 - 노드 (Node): 신경망 레이어 내의 개별 계산 단위로, 하나의 뉴런이라고도 불립니다. 입력값을 받아 가중치를 곱하고 활성화 함수를 적용해 출력값을 생성합니다.
