--- a/5강/02 스크립트.md
+++ b/5강/02 스크립트.md
@@ -328,6 +328,9 @@ model.fit(X, y, epochs=100)
 ```
 epochs는 전체 데이터셋을 몇 번 반복해서 학습할 것인지를 결정합니다. 여기서는 100번 학습합니다.
 
+- 넘파이(numpy) : 파이썬에서 행렬 및 대규모 다차원 배열을 다루기 위한 라이브러리. 과학 연산을 위한 다양한 기능을 제공합니다.
+
+
 2. 예측
 모델이 학습된 후, 새로운 데이터를 입력하여 예측을 수행할 수 있습니다.
 
